Fixed issues with items not aligning

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5,7 +5,7 @@
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
-  font-family: sans-serif;
+  font-family:cursive;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -1078,6 +1078,7 @@ th {
 }
 html {
   font-size: 10px;
+  
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -1617,6 +1618,7 @@ pre code {
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
