--- a/css/shop-homepage.css
+++ b/css/shop-homepage.css
@@ -7,8 +7,9 @@
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
     background-image: url("../img/wood-grain.jpg");
-    color:ghostwhite;
-   
+}
+.lead {
+    color: white;
 }
 
 /*TODO Adjust Carousel image size, has to do with other object size adjust during browswer size change */
@@ -38,9 +39,7 @@ body {
 }
 
 .thumbnail img {
-    width: 100%;
-    
-    
+    width: 100%; 
 }
 
 .ratings {
@@ -51,6 +50,8 @@ body {
 
 .thumbnail {
     padding: 0;
+    margin-top:0;
+    display: inline-block !important;
     
     
 }
